# texmail

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  build_app.sh  install.sh  pyproject.toml
LatexClipApp/: Config.swift  ContentView.swift  ConversionService.swift  HotkeyManager.swift  LatexClipApp.swift  ShortcutRecorder.swift
docs/: index.html  robots.txt  sitemap.xml  yandex_4726d477d0f15d84.html
homebrew/: taxmail.rb
latex2clip/: __init__.py  __main__.py  cli.py  clipboard.py  composer.py  config.py  daemon.py  gui.py  hotkey.py  menubar.py  notify.py  parser.py  service.py  service_installer.py
latex2clip/renderer/: __init__.py  base.py  local_tex.py  matplotlib_.py
resources/: latex2clip.icns  launcher.c  make_icon.py
tests/: test_composer.py  test_parser.py  test_renderer.py
